Assignment Hand-in

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -5,8 +5,8 @@
             "type": "shell",
             "command": "clang",
             "args": [
-                "$compile_flags.txt",
-                "main.c",
+                "'@compile_flags.txt'", // `'` for Powershell
+                "./src/main.c",
                 "-o",
                 "main"
             ],
