--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,13 +1,13 @@
 {
-    "version": "0.2.0",
     "configurations": [
         {
             "type": "lldb",
             "request": "launch",
             "name": "Debug",
-            "program": "${workspaceFolder}/main.exe",
+            "program": "${workspaceFolder}/main",
             "args": [],
             "preLaunchTask": "${defaultBuildTask}",
         }
-    ]
+    ],
+    "version": "0.2.0",
 }
